# parson

./: CMakeLists.txt  info.h.in
include/: allocator.h  info.h  lexer.h  list.h  parser.h  parson.h
lib/: CMakeLists.txt  allocator.c  lexer.c  list.c  parser.c  parson.c
src/: lexer.c  list.c  main.c  parser.c  parson.c
